--- a/LECTURE/DAY30/vue-comp/package.json
+++ b/LECTURE/DAY30/vue-comp/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.4.1"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
@@ -22,8 +23,10 @@
     "pug": "^2.0.0-rc.2",
     "sass-loader": "^5.0.1",
     "vue-loader": "^12.1.0",
+    "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.3",
     "vue2-filters": "^0.1.9",
+    "vuex": "^2.3.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
